--- a/index.html
+++ b/index.html
@@ -8,22 +8,37 @@
     <title>Co Centuries</title>
 </head>
 <body>
-
     <div class="loading-container">
         <div class="spinner"></div>
+    </div>
+
+    <div class="cover" data-cover="false">
+        <button class="close">X</button>
+        <div class="det">
+
+        </div>
     </div>
     
     <div class="main-container">
         <div class="header">
             <h1>CO-Centuries</h1>
             <h2>CO2 emissions through the years</h2>
-            <h3>Infos</h3>
+            <button class="infos"></button>
         </div>
 
         <div class="central-section">
             <div class="leg-bar">
                 <div class="leg-bar-bar">
-
+                    <span class="legg" id="legg-10"></span>
+                    <span class="legg" id="legg-9"></span>
+                    <span class="legg" id="legg-8"></span>
+                    <span class="legg" id="legg-7"></span>
+                    <span class="legg" id="legg-6"></span>
+                    <span class="legg" id="legg-5"></span>
+                    <span class="legg" id="legg-4"></span>
+                    <span class="legg" id="legg-3"></span>
+                    <span class="legg" id="legg-2"></span>
+                    <span class="legg" id="legg-1"></span>
                 </div>
             </div>
             <div class="map-container">
