--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
         </div>
     </div>
+    <div class="message-cont">
+        
+    </div>
     
     <div class="main-container">
         <div class="header">
