--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <div class="spinner"></div>
     </div>
 
+    <div class="start" data-started="false">
+        <h2>SCROLL DOWN<br>TO START</h2>
+    </div>
+
     <div class="cover" data-cover="false">
         <button class="close">X</button>
         <div class="det">
