--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
         <h2>SCROLL DOWN<br>TO START</h2>
     </div>
 
+    <div class="end" data-notended="true">
+        <h2>HOW ABOUT WE STOP<br>BEING HYPOCRITES ?</h2>
+        <div class="linksCont">
+            <button class="restart">NO THANKS</button>
+            <button class="ready">I'M READY</button>
+        </div>
+    </div>
+
     <div class="cover" data-cover="false">
         <button class="close">X</button>
         <div class="det">
