--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
             <h2>CO2 emissions through the years</h2>
             <button class="infos"></button>
         </div>
-
         <div class="central-section">
             <div class="leg-bar">
                 <div class="leg-bar-bar">
@@ -54,6 +53,21 @@
                     <span class="legg" id="legg-3"></span>
                     <span class="legg" id="legg-2"></span>
                     <span class="legg" id="legg-1"></span>
+                </div>
+            </div>
+
+            <div class="leg-bar-leg">
+                <div class="leg-bar-bar">
+                    <p class="legg">10000</p>
+                    <p class="legg">5000</p>
+                    <p class="legg">2000</p>
+                    <p class="legg">1000</p>
+                    <p class="legg">500</p>
+                    <p class="legg">200</p>
+                    <p class="legg">100</p>
+                    <p class="legg">50</p>
+                    <p class="legg">20</p>
+                    <p class="legg">Millions Tons of CO2</p>
                 </div>
             </div>
             <div class="map-container">
