--- a/new-view.html
+++ b/new-view.html
@@ -44,6 +44,20 @@
                     <span class="legg" id="legg-1"></span>
                 </div>
             </div>
+            <div class="leg-bar-leg">
+                <div class="leg-bar-bar">
+                    <p class="legg">10</p>
+                    <p class="legg">5</p>
+                    <p class="legg">2</p>
+                    <p class="legg">1</p>
+                    <p class="legg">0,5</p>
+                    <p class="legg">0,2</p>
+                    <p class="legg">0,1</p>
+                    <p class="legg">0,05</p>
+                    <p class="legg">0,02</p>
+                    <p class="legg">Tons of CO2 per resident</p>
+                </div>
+            </div>
             <div class="map-container">
             </div>
         </div>
