--- a/new-view.html
+++ b/new-view.html
@@ -16,10 +16,10 @@
         <button class="close">X</button>
         <div class="det">
 
-    </div>
+        </div>
     </div>
     <div class="message-cont">
-        <p>Test</p>
+        <button class="restart">RESTART</button>
     </div>
     
     <div class="main-container">
