--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style/style.css">
     <title>CO Centuries</title>
 </head>
-<body>
+<body class="in">
     <div class="loading-container">
         <div class="spinner"></div>
     </div>
