--- a/new-view.html
+++ b/new-view.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
-    <title>CO Centuries</title>
+    <link rel="icon" type="image/x-icon" href="./img/fav.png">
+    <title>CO CENTURIES</title>
 </head>
 <body>
     <div class="loading-container">
@@ -24,8 +25,7 @@
     
     <div class="main-container">
         <div class="header">
-            <h1>CO-Centuries</h1>
-            <h2>CO2 emissions through the years</h2>
+            <img src="./img/logo.png" alt="">
             <button class="infos"></button>
         </div>
 
