--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
-    <title>CO Centuries</title>
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="icon" type="image/x-icon" href="./img/fav.png">
+    <title>CO CENTURIES</title>
 </head>
 <body class="in">
     <div class="loading-container">
@@ -36,8 +37,7 @@
     
     <div class="main-container">
         <div class="header">
-            <h1>CO-Centuries</h1>
-            <h2>CO2 emissions through the years</h2>
+            <img src="./img/logo.png" alt="">
             <button class="infos"></button>
         </div>
         <div class="central-section">
