--- a/new-view.html
+++ b/new-view.html
@@ -55,7 +55,7 @@
                     <p class="legg">0,1</p>
                     <p class="legg">0,05</p>
                     <p class="legg">0,02</p>
-                    <p class="legg">Tons of CO2 per resident</p>
+                    <p class="legg">Tons of CO2 per capita</p>
                 </div>
             </div>
             <div class="map-container">
