--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="icon" type="image/x-icon" href="./img/fav.png">
-    <title>CO CENTURIES</title>
+    <title>CO2 CENTURIES</title>
 </head>
 <body class="in">
     <div class="loading-container">
