--- a/new-view.html
+++ b/new-view.html
@@ -68,6 +68,7 @@
                 <div class="progress-bar" data-en="true">
 
                 </div>
+                <input class="range" type="range" disabled>
             </div>
         </div>
     </div>
